@@ -4,6 +4,12 @@ partman-md (43) UNRELEASED; urgency=low
   * Do not ask confirmation on further calls to device_remove_md() when
     partman-md/device_remove_md is preseed.
   * Use 255 as return code when user backs up in device_remove_md().
+  * Use 99 as return code when partman needs to be restarted in
+    device_remove_md() instead of doing it directly.
+    Breaks: partman-partitioning (<< 62)
+  * Handle device_remove_lvm() returning 99 to indicate that partman needs to
+    be restarted.
+    Depends: partman-lvm (>= 64)
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 21 Aug 2008 21:40:53 +0200
 
