@@ -9,6 +9,8 @@ partman-partitioning (62) UNRELEASED; urgency=low
     This function handle multiple devices at once.
     Breaks: partman-auto (<< 81)
   * Update storage_device/label/do_option to call prepare_new_labels().
+  * Only restart partman once for all devices in prepare_new_labels().
+    Depends: partman-lvm (>= 64), partman-md (>= 43)
 
  -- Jérémy Bobbio <lunar@debian.org>  Wed, 20 Aug 2008 00:06:08 +0200
 
